--- a/summer_project/styles/App.scss
+++ b/summer_project/styles/App.scss
@@ -1,1 +1,26 @@
 @import "./sass/config";
+@import "./sass/nav";
+@import "./sass/header";
+@import "./sass/recentOffers";
+@import "./sass/forLandlords";
+
+* {
+  box-sizing: border-box;
+  font-family: Gotham Rounded, sans-serif;
+  font-weight: normal;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+body,
+html {
+  position: relative;
+  overflow-x: hidden;
+  height: 100vh;
+  min-height: 100vh;
+  scroll-behavior: smooth;
+  background-color: $main-color3;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
