--- a/summer_project/styles/App.scss
+++ b/summer_project/styles/App.scss
@@ -3,6 +3,7 @@
 @import "./sass/header";
 @import "./sass/recentOffers";
 @import "./sass/forLandlords";
+@import "./sass/footer";
 
 * {
   box-sizing: border-box;
@@ -17,7 +18,6 @@ body,
 html {
   position: relative;
   overflow-x: hidden;
-  height: 100vh;
   min-height: 100vh;
   scroll-behavior: smooth;
   background-color: $main-color3;
