--- a/summer_project/styles/sass/_header.scss
+++ b/summer_project/styles/sass/_header.scss
@@ -10,6 +10,10 @@
   .available-offers {
     button {
       @include btn($main-color2);
+      a {
+        color: $main-color3;
+        text-decoration: none;
+      }
     }
   }
 }
