--- a/summer_project/styles/sass/_nav.scss
+++ b/summer_project/styles/sass/_nav.scss
@@ -33,6 +33,10 @@
             text-decoration: none;
             color: $main-black;
             font-size: 20px;
+            &:hover {
+              transition: 0.2s;
+              opacity: 60%;
+            }
           }
         }
         li.active::after {
