--- a/summer_project/styles/sass/_footer.scss
+++ b/summer_project/styles/sass/_footer.scss
@@ -1,7 +1,6 @@
 .Footer {
-  position: absolute;
   width: 100vw;
   height: 50vh;
-  background-color: red;
-  bottom: 0;
+  background-color: $main-color2;
+  margin-top: auto;
 }
