--- a/summer_project/styles/sass/_forLandlords.scss
+++ b/summer_project/styles/sass/_forLandlords.scss
@@ -1,13 +1,11 @@
 .ForLandlords {
-  min-height: 70vh;
+  min-height: 100vh;
   width: 100vw;
-  background-color: rgb(255, 219, 219);
-  text-align: center;
-  //   padding: 20px;
+  @include flex(column);
   .title {
     display: inline-block;
     width: fit-content;
-    margin: 50px auto;
+    margin: 50px 0;
   }
   .offers {
     width: 100%;
@@ -16,10 +14,7 @@
     gap: 20px;
 
     .offer {
-      width: 300px;
-      height: 350px;
-      background-color: red;
-      border-radius: 20px;
+      @include card();
     }
   }
 }
