--- a/summer_project/styles/App.scss
+++ b/summer_project/styles/App.scss
@@ -24,3 +24,7 @@ html {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+
+.children {
+  min-height: 100vh;
+}
