--- a/summer_project/styles/sass/_config.scss
+++ b/summer_project/styles/sass/_config.scss
@@ -31,3 +31,16 @@ $main-black: hsl(0, 7%, 9%);
     transform: scale(1.15);
   }
 }
+
+@mixin card() {
+  height: 350px;
+  width: 300px;
+  background-color: $main-color3;
+  border-radius: 20px;
+  -webkit-box-shadow: -1px 1px 14px -2px rgba(0, 0, 0, 0.247);
+  box-shadow: -1px 1px 14px -2px rgba(0, 0, 0, 0.205);
+  &:hover {
+    transition: 0.5s;
+    transform: scale(1.03);
+  }
+}
