--- a/summer_project/styles/sass/_header.scss
+++ b/summer_project/styles/sass/_header.scss
@@ -1,18 +1,38 @@
 .Header {
   @include flex(column);
-  background-color: rgb(255, 198, 198);
   width: 100vw;
-  height: 80vh;
-  .title {
-    width: 50%;
-    text-align: center;
+  height: calc(100vh - 60px);
+  .image-slider {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    .img {
+      width: 100%;
+      height: 100%;
+      display: block;
+      opacity: 1;
+      transition: opacity 0.75s ease-in-out;
+      object-fit: cover;
+    }
   }
-  .available-offers {
-    button {
-      @include btn($main-color2);
-      a {
+  .try {
+    @include flex(column);
+    position: absolute;
+    .title {
+      width: 90%;
+      text-align: center;
+      h1 {
+        font-size: 3rem;
         color: $main-color3;
-        text-decoration: none;
+      }
+    }
+    .available-offers {
+      button {
+        @include btn($main-color2);
+        a {
+          color: $main-color3;
+          text-decoration: none;
+        }
       }
     }
   }
