--- a/summer_project/styles/sass/_recentOffers.scss
+++ b/summer_project/styles/sass/_recentOffers.scss
@@ -1,14 +1,16 @@
 .RecentOffers {
+  position: relative;
   min-height: 100vh;
   width: 100vw;
-  @include flex(column);
+  text-align: center;
   .title {
     display: inline-block;
     width: fit-content;
-    margin: 50px 0;
+    margin: 70px 0 90px 0;
   }
   .offers {
     width: 100%;
+    z-index: 9;
     height: 80%;
     @include flex(row);
     gap: 20px;
