--- a/summer_project/styles/App.css
+++ b/summer_project/styles/App.css
@@ -269,7 +269,7 @@
 
 .RecentOffers .offers .offer {
   height: 350px;
-  width: 300px;
+  min-width: 300px;
   background-color: #fffffb;
   border-radius: 20px;
   -webkit-box-shadow: -1px 1px 14px -2px rgba(0, 0, 0, 0.247);
@@ -281,6 +281,13 @@
   transition: 0.5s;
   -webkit-transform: scale(1.03);
           transform: scale(1.03);
+}
+
+@media screen and (max-width: 640px) {
+  .RecentOffers .offers .offer {
+    min-width: 40px;
+    height: 250px;
+  }
 }
 
 .ForLandlords {
@@ -366,40 +373,45 @@
 }
 
 .Offers {
-  gap: 20px;
   position: relative;
-  height: 400vh;
-  padding: 100px;
+  min-height: 400vh;
 }
 
 .Offers .offers-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  float: right;
-  width: 70%;
-  gap: 20px;
-  margin-right: 100px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(300px, 1fr))[auto-fill];
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  row-gap: 20px;
+  -webkit-column-gap: 40px;
+          column-gap: 40px;
+  width: 80%;
+  margin: 0 auto;
 }
 
 .Offers .filter-tool {
-  float: left;
-  width: 300px;
-  height: 100vh;
-  background-color: red;
-  margin-left: 100px;
+  width: 70%;
+  height: 100px;
+  background-color: #5b5f97;
+  margin: 50px auto;
+}
+
+@media screen and (max-width: 1648px) {
+  .Offers .offers-container {
+    -ms-grid-columns: (minmax(250px, 1fr))[auto-fill];
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 60px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .Offers .offers-container {
+    gap: 10px;
+    width: 100%;
+    padding: 10px;
+    -ms-grid-columns: (minmax(40%, 1fr))[auto-fill];
+        grid-template-columns: repeat(auto-fill, minmax(40%, 1fr));
+  }
 }
 
 * {
@@ -428,7 +440,7 @@ html {
 
 .Card {
   height: 350px;
-  width: 300px;
+  min-width: 300px;
   background-color: #fffffb;
   border-radius: 20px;
   -webkit-box-shadow: -1px 1px 14px -2px rgba(0, 0, 0, 0.247);
@@ -440,5 +452,12 @@ html {
   transition: 0.5s;
   -webkit-transform: scale(1.03);
           transform: scale(1.03);
+}
+
+@media screen and (max-width: 640px) {
+  .Card {
+    min-width: 40px;
+    height: 250px;
+  }
 }
 /*# sourceMappingURL=App.css.map */
