--- a/summer_project/styles/sass/_config.scss
+++ b/summer_project/styles/sass/_config.scss
@@ -33,7 +33,7 @@ $main-black: hsl(0, 7%, 9%);
 
 @mixin card() {
   height: 350px;
-  width: 300px;
+  min-width: 300px;
   background-color: $main-color3;
   border-radius: 20px;
   -webkit-box-shadow: -1px 1px 14px -2px rgba(0, 0, 0, 0.247);
@@ -41,5 +41,10 @@ $main-black: hsl(0, 7%, 9%);
   &:hover {
     transition: 0.5s;
     transform: scale(1.03);
+  }
+
+  @media screen and (max-width: 640px) {
+    min-width: 40px;
+    height: 250px;
   }
 }
