--- a/summer_project/styles/sass/_header.scss
+++ b/summer_project/styles/sass/_header.scss
@@ -1,38 +1,94 @@
 .Header {
-  @include flex(column);
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
   width: 100vw;
   height: calc(100vh - 60px);
-  .image-slider {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    .img {
-      width: 100%;
-      height: 100%;
-      display: block;
-      opacity: 0;
-      transition: opacity 0.75s ease-in-out;
-    }
-  }
-  .try {
-    @include flex(column);
-    position: absolute;
-    .title {
-      width: 90%;
-      text-align: center;
+  .text {
+    width: 50%;
+    .hd-title {
       h1 {
-        font-size: 3rem;
-        color: $main-color3;
+        font-size: 60px;
       }
     }
-    .available-offers {
-      button {
-        @include btn($main-color2);
-        a {
-          color: $main-color3;
-          text-decoration: none;
+    .hd-description {
+      margin: 10px 0;
+      p {
+        font-size: 25px;
+      }
+    }
+    .btns {
+      display: flex;
+      gap: 10px;
+      .find-tenant-btn {
+        button {
+          @include btn($main-color2, none);
         }
       }
+      .find-flat-btn {
+        button {
+          @include btn(transparent, $main-color2);
+        }
+      }
+    }
+  }
+  .vector-img-container {
+    width: 700px;
+  }
+}
+
+@media screen and (max-width: 1518px) {
+  .Header {
+    .text {
+      .hd-title {
+        h1 {
+          font-size: 50px;
+        }
+      }
+    }
+    .vector-img-container {
+      width: 600px;
+    }
+  }
+}
+
+@media screen and (max-width: 1333px) {
+  .Header {
+    .text {
+      .hd-title {
+        h1 {
+          font-size: 40px;
+        }
+      }
+      .hd-description {
+        p {
+          font-size: 20px;
+        }
+      }
+    }
+    .vector-img-container {
+      width: 500px;
+    }
+  }
+}
+
+@media screen and (max-width: 1124px) {
+  .Header {
+    .text {
+      width: 90%;
+      .hd-title {
+        h1 {
+          font-size: 40px;
+        }
+      }
+      .hd-description {
+        p {
+          font-size: 20px;
+        }
+      }
+    }
+    .vector-img-container {
+      display: none;
     }
   }
 }
