--- a/summer_project/styles/App.css
+++ b/summer_project/styles/App.css
@@ -18,13 +18,18 @@
           align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  border-bottom: solid rgba(0, 0, 0, 0.171) 0.5px;
+}
+
+.Nav .ham-menu {
+  display: none;
 }
 
 .Nav .logo {
   position: absolute;
   left: 0;
   cursor: pointer;
-  margin-left: 40px;
+  margin-left: 80px;
 }
 
 .Nav .logo a {
@@ -141,91 +146,132 @@
   color: #191515;
 }
 
+@media screen and (max-width: 900px) {
+  .Nav .menu {
+    display: none;
+  }
+  .Nav .ham-menu {
+    display: block;
+    position: absolute;
+    left: 0;
+    margin-left: 20px;
+  }
+}
+
 .Header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   width: 100vw;
   height: calc(100vh - 60px);
 }
 
-.Header .image-slider {
-  position: relative;
-  width: 100%;
-  height: 100%;
+.Header .text {
+  width: 50%;
 }
 
-.Header .image-slider .img {
-  width: 100%;
-  height: 100%;
-  display: block;
-  opacity: 0;
-  -webkit-transition: opacity 0.75s ease-in-out;
-  transition: opacity 0.75s ease-in-out;
+.Header .text .hd-title h1 {
+  font-size: 60px;
 }
 
-.Header .try {
+.Header .text .hd-description {
+  margin: 10px 0;
+}
+
+.Header .text .hd-description p {
+  font-size: 25px;
+}
+
+.Header .text .btns {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  position: absolute;
+  gap: 10px;
 }
 
-.Header .try .title {
-  width: 90%;
-  text-align: center;
-}
-
-.Header .try .title h1 {
-  font-size: 3rem;
-  color: #fffffb;
-}
-
-.Header .try .available-offers button {
+.Header .text .btns .find-tenant-btn button {
   background-color: #5b5f97;
   border: none;
   outline: none;
-  padding: 10px 20px;
   color: #fffffb;
+  font-size: 15px;
+  height: 40px;
+  width: 120px;
   border-radius: 50px;
   margin: 20px 0;
   cursor: pointer;
 }
 
-.Header .try .available-offers button:hover {
+.Header .text .btns .find-tenant-btn button:hover {
   -webkit-transition: 0.5s;
   transition: 0.5s;
-  -webkit-transform: scale(1.15);
-          transform: scale(1.15);
+  background-color: #484b77;
 }
 
-.Header .try .available-offers button a {
-  color: #fffffb;
-  text-decoration: none;
+.Header .text .btns .find-flat-btn button {
+  background-color: transparent;
+  border: #5b5f97;
+  outline: none;
+  color: #5b5f97;
+  border: solid #5b5f97 0.5px;
+  font-size: 15px;
+  height: 40px;
+  width: 120px;
+  border-radius: 50px;
+  margin: 20px 0;
+  cursor: pointer;
+}
+
+.Header .text .btns .find-flat-btn button:hover {
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  background-color: #f7f7fa;
+}
+
+.Header .vector-img-container {
+  width: 700px;
+}
+
+@media screen and (max-width: 1518px) {
+  .Header .text .hd-title h1 {
+    font-size: 50px;
+  }
+  .Header .vector-img-container {
+    width: 600px;
+  }
+}
+
+@media screen and (max-width: 1333px) {
+  .Header .text .hd-title h1 {
+    font-size: 40px;
+  }
+  .Header .text .hd-description p {
+    font-size: 20px;
+  }
+  .Header .vector-img-container {
+    width: 500px;
+  }
+}
+
+@media screen and (max-width: 1124px) {
+  .Header .text {
+    width: 90%;
+  }
+  .Header .text .hd-title h1 {
+    font-size: 40px;
+  }
+  .Header .text .hd-description p {
+    font-size: 20px;
+  }
+  .Header .vector-img-container {
+    display: none;
+  }
 }
 
 .RecentOffers {
