--- a/app/styles/sass/_filterTool.scss
+++ b/app/styles/sass/_filterTool.scss
@@ -4,6 +4,7 @@
   background-color: $main-color3;
   text-align: center;
   height: 100vh;
+  // width: 100%;
   .title-arrow {
     display: flex;
     justify-content: space-between;
