--- a/app/styles/sass/_header.scss
+++ b/app/styles/sass/_header.scss
@@ -34,7 +34,13 @@
   }
   .vector-img-container {
     position: relative;
-    width: 700px;
+    width: 40%;
+    height: 70%;
+    margin-right: 5px;
+    object-fit: cover;
+    .ld-img {
+      border-radius: 50px;
+    }
   }
 }
 
@@ -73,7 +79,7 @@
   }
 }
 
-@media screen and (max-width: 1124px) {
+@media screen and (max-width: 1000px) {
   .Header {
     .text {
       width: 90%;
